[package]
name = "heros_spirit_utils"
description = "data conversion tools for files used by Hero's Spirit"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
flate2 = "1.0.28"
itertools = "0.12.0"
jsonformat = "2.0.0"
strum = { version = "0.25.0", features = ["derive"] }
