[package]
name = "heros_spirit_utils"
description = "data conversion tools for files used by Hero's Spirit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
zip = { version = "2.1.0", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde-xml-rs = "0.7.0"
base64 = "0.22.1"
image = { version = "0.25.1", default-features = false, features = ["png", "bmp"] }
inquire = { version = "0.7.5", default-features = false, features = ["crossterm"] }
strum = { version = "0.27.1", features = ["derive"] }
itertools = "0.14.0"
color-hex = "0.2.0"
indexmap = { version = "2.9.0", features = ["serde"] }
rand = { version = "0.9.1", default-features = false, features = ["std", "thread_rng"] }
rand_pcg = "0.9.0"
geo = { version = "0.30.0", default-features = false }
imageproc = { version = "0.25.0", default-features = false }
lyon = "1.0.1"
rand_seeder = "0.4.0"
adjective_adjective_animal = "0.1.0"
constcat = "0.6.0"
serde_yaml = "0.9.34"
